feat: update theme

--- a/assets/src/sass/base/_accessibility.scss
+++ b/assets/src/sass/base/_accessibility.scss
@@ -1,3 +1,10 @@
+/*--------------------------------------------------------------
+# Wordpress base screen-reader-text class
+  --------------------------------------------------------------*/
 .screen-reader-text {
   display: none;
+}
+
+.pointer {
+  cursor: pointer;
 }
