--- a/assets/src/sass/base/_colors.scss
+++ b/assets/src/sass/base/_colors.scss
@@ -1,3 +1,6 @@
+/*--------------------------------------------------------------
+# Background colors
+  --------------------------------------------------------------*/
 .astro-bg-light {
   background-color: $color-white-80;
 }
@@ -10,6 +13,9 @@
   background-color: $color-white-60;
 }
 
+/*--------------------------------------------------------------
+# Text colors
+  --------------------------------------------------------------*/
 .text-blue {
   color: $color-blue-100;
 }
