--- a/assets/src/sass/components/_hr.scss
+++ b/assets/src/sass/components/_hr.scss
@@ -2,3 +2,8 @@ hr {
   height: 2px !important;
   color: $color-purple-60;
 }
+
+.horizontal-divider {
+  height: 2px !important;
+  color: $color-purple-40;
+}
