--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -1,14 +1,16 @@
+/*--------------------------------------------------------------
+# Set base Roboto font
+  --------------------------------------------------------------*/
 body {
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
+/*--------------------------------------------------------------
+# Headings
+  --------------------------------------------------------------*/
 .text-h1 {
   font-weight: 700;
   @include fluid-font-size($size-xl, $size-xg);
-}
-
-.text-bigger {
-  @include fluid-font-size($size-s, $size-l);
 }
 
 .text-h2 {
@@ -37,12 +39,22 @@ body {
   }
 }
 
+/*--------------------------------------------------------------
+# Font sizes
+  --------------------------------------------------------------*/
+.text-bigger {
+  @include fluid-font-size($size-s, $size-l);
+}
+
 .text-regular {
   font-weight: normal;
   font-size: 0.9rem;
   line-height: 1.5rem;
 }
 
+/*--------------------------------------------------------------
+# Font weights and styles
+  --------------------------------------------------------------*/
 .text-medium {
   font-weight: 500;
 }
@@ -54,4 +66,25 @@ body {
 .text-italic {
   font-weight: 300;
   font-style: italic;
+}
+
+/*--------------------------------------------------------------
+# Special text
+  --------------------------------------------------------------*/
+.text-error {
+  font-weight: 700;
+  @include fluid-font-size(48px, 90px);
+
+  @extend .shake;
+}
+
+.text-lined {
+  &::before, &::after {
+    display: inline-block;
+    content: '';
+    border-top: 2px solid $color-blue-100;
+    width: 10%;
+    margin: 0 1rem;
+    transform: translateY(-0.5rem);
+  }
 }
