--- a/assets/src/sass/components/_pagination.scss
+++ b/assets/src/sass/components/_pagination.scss
@@ -2,9 +2,13 @@
   border: none;
   border-radius: 100% !important;
 
-  padding: 0.25rem 0.75rem;
+  padding: 0.4rem 0.1rem;
   margin-right: 1rem;
   margin-left: 1rem;
+  width: 2.25rem;
+  height: 2.25rem;
+  text-align: center;
+  word-wrap: normal;
 
   color: $color-white-100 !important;
   background-color: $color-purple-60 !important;
