--- a/assets/src/sass/helpers/_functions.scss
+++ b/assets/src/sass/helpers/_functions.scss
@@ -1,6 +1,34 @@
 /*--------------------------------------------------------------
-# Unit strip function
+# Unit stripping function
   --------------------------------------------------------------*/
 @function strip-unit($value) {
   @return $value / ($value * 0 + 1);
+}
+
+/*--------------------------------------------------------------
+# Pixel size calculator based on viewport width
+  --------------------------------------------------------------*/
+@function fluid-size($min-size, $max-size: $min-size) {
+  $min-vw: 600px;
+  $max-vw: 1200px;
+
+  $u1: unit($min-vw);
+  $u2: unit($max-vw);
+  $u3: unit($min-size);
+  $u4: unit($max-size);
+
+  @if $u1 == $u2 and $u1 == $u3 and $u1 == $u4 {
+
+    $size: $min-size;
+
+    @if screen and (min-width: $min-vw) {
+      $size: calc(#{$min-size} + #{strip-unit($max-size - $min-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
+    }
+
+    @if screen and (min-width: $max-vw) {
+      $size: $max-size;
+    }
+
+    @return $size;
+  }
 }
