--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 /*
 Theme Name: Astro
-Theme URI: https://github.com/grabovszky/astro-wp-theme
-Author: Gábor Kristóf
-Author URI: https://www.gaborkristof.com
+Theme URI: https://gitlab.rackhost.hu/rackhost/wp-tudasbazis/
+Author: Gábor Kristóf & the Rackhost team
+Author URI: https://www.gaborkristof.com/
 
-Description: Astro is a custom WordPress Theme for wiki pages.
+Description: Astro is a custom WordPress theme for the Rackhost knowledge base.
 
 Version: 1.0.0
 Requires as least: 5.7
 Tested up to: 5.7
 Requires PHP: 7.4
 
-License: .php files are licensed under GNU General Public License v3 or later, files under /assets is Copyright (C)2021 Kristóf Gábor.
-License URI: LICENSE
+License: .php files are licensed under GNU General Public License v3 or later, files under /assets is Copyright (C)2021 Rackhost Ltd.
+License URI: LICENSE.md
 
 Text Domain: astro
 
-Tags: blog, two-columns, left-sidebar, accessibility-ready, custom-background, custom-header, custom-logo, custom-menu, featured-images, footer-widgets, theme-options, translation-ready
+Tags: blog, two-columns, left-sidebar, accessibility-ready, custom-header, custom-logo, custom-menu, featured-images, footer-widgets, theme-options, translation-ready
 */
